# Murloc-Manager

./: .env.example  .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: project-status-mirror.yml
src/murloc/: checks_runner.py  cli.py  config.py  github_client.py  issue_classifier.py  logging_setup.py  orchestrator.py  project_state.py  prompt_builder.py  retry_policy.py  worktree_manager.py
src/murloc/executors/: base.py  claude_cli.py
tests/: test_claude_executor.py  test_config.py  test_dry_run_and_redaction.py  test_issue_classifier.py  test_orchestrator_smoke.py  test_orchestrator_units.py  test_project_state.py  test_projects_v2_client.py  test_prompt_builder.py  test_retry_policy.py  test_worktree_manager.py
