[project]
name = "murloc-manager"
version = "0.1.0"
description = "Local orchestrator that drives Claude Code CLI through GitHub Issues"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyGithub>=2.3",
    "click>=8.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "ruff>=0.5",
]

[project.scripts]
murloc = "murloc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/murloc"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
